crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__folded_window.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  editor                                                                                                          +  ││
│ ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
│                                                                                                                     ││
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ( ␣ ) leader · ( : ) commands · ( n ) new tab · ( s/v ) split · ( q ) quit
