crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_four_widgets_br_focused.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭───────────────────────────────────────────╮╭───────────────────────────────────────────╮
│  search…                   ││  RecentCommits                         +  ││  Branches                              +  │
│━━━━━━━━━━━━━━━━━━━━━━━━━━━━││ ───────────────────────────────────────── ││ ───────────────────────────────────────── │
│  (no projects)             ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││   select a project                        ││   select a project                        │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            │╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯
│                            │╭───────────────────────────────────────────╮┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            ││  ChangedFiles                          +  │┃  Stashes                               +  ┃
│                            ││ ───────────────────────────────────────── │┃ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││   select a project                        │┃   select a project                        ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
╰────────────────────────────╯╰───────────────────────────────────────────╯┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 ( j/k ) navigate · ( Enter ) copy · ( Esc ) back
