crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_sidebar_focused_all_inactive.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭───────────────────────────────────────────╮╭───────────────────────────────────────────╮
│  search…                   ││  RecentCommits                         +  ││  Branches                              +  │
│━━━━━━━━━━━━━━━━━━━━━━━━━━━━││ ───────────────────────────────────────── ││ ───────────────────────────────────────── │
│  (no projects)             ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││   select a project                        ││   select a project                        │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
╰────────────────────────────╯╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯
  /  search ·  Enter  open ·  n  new ·  :  commands ·  q  quit
