crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_small_terminal.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────╮
│  home                                                 +  │
╰──────────────────────────────────────────────────────────╯
╭ projects ────────╮┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│  search…         │┃  RecentCommits                    +  ┃
│━━━━━━━━━━━━━━━━━━│┃ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ┃
│  (no projects)   │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃   select a project                   ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
│                  │┃                                      ┃
╰──────────────────╯┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
  j/k  navigate ·  Enter  copy ·  Esc  back
