crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_three_widgets_middle_focused.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭───────────────────────────────────────────╮┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│  search…                   ││  RecentCommits                         +  │┃  ChangedFiles                          +  ┃
│━━━━━━━━━━━━━━━━━━━━━━━━━━━━││ ───────────────────────────────────────── │┃ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ┃
│  (no projects)             ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃   select a project                        ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┃                                           ┃
│                            ││                                           │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            ││                                           │╭───────────────────────────────────────────╮
│                            ││   select a project                        ││  Branches                              +  │
│                            ││                                           ││ ───────────────────────────────────────── │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││   select a project                        │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
╰────────────────────────────╯╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯
  j/k  navigate ·  Enter  copy ·  Esc  back
