crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_with_other_workspaces.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home  ·  dev                                                                                                     +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭────────────────────────────────────────────────────────────────────────────────────────╮
│  search…                   ││  RecentCommits                                                                      +  │
│━━━━━━━━━━━━━━━━━━━━━━━━━━━━││ ────────────────────────────────────────────────────────────────────────────────────── │
│  (no projects)             ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││   select a project                                                                     │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯
  /  search ·  Enter  open ·  n  new ·  :  commands ·  q  quit
